--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ước gì em có cái nút</title>
     <style>
+        
       body {
+        padding: 20px 30px;
         display: flex;
         flex-direction: column;
         justify-content: center;
